# geo-events

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml  docs.yml  publish.yml
crates/adapters/http/: Cargo.toml
crates/adapters/http/src/: lib.rs
crates/adapters/napi/: package.json
crates/adapters/napi/src/: lib.rs
crates/adapters/stdin-stdout/src/: lib.rs
crates/cli/src/: http_main.rs  main.rs
crates/cli/tests/: ndjson_smoke.rs
crates/cli/tests/common/: mod.rs
crates/engine/: Cargo.toml
crates/engine/benches/: ingest.rs  process_batch.rs
crates/engine/src/: lib.rs  rules.rs
crates/polygon-json/src/: lib.rs
crates/spatial/src/: lib.rs
crates/state/src/: lib.rs
docs-site/docs/: dwell.md  zone-types.md
docs-site/docs/examples/: dwell-debounce.md
docs-site/src/pages/: index.module.css  index.tsx
examples/: sample-zones.ndjson
examples/typescript/: 01-basic-geofence.ts  02-multi-zone.ts  03-dwell.ts  package.json  tsconfig.json
geo-stream/: package-lock.json  package.json  tsconfig.json
geo-stream/src/: engine.ts  events.ts  index.ts  native.d.ts  native.js  types.ts
protocol/: ROADMAP.md  ndjson-v1.1.md  ndjson-v1.md  ndjson.md
protocol/schema/: README.md  geojson-polygon-geometry.schema.json  http-v1-event.schema.json  http-v1-ingest-body.schema.json  http-v1-register-polygon-body.schema.json  http-v1-register-radius-body.schema.json  ndjson-stderr-line.schema.json  ndjson-stdin-line.schema.json  ndjson-stdout-line.schema.json
scripts/: bump.sh
(+5 files in other folders)
