[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Pure batch geospatial stream engine"

[dependencies]
spatial = { path = "../spatial" }
state = { path = "../state" }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
geo = "0.28"

[[bench]]
name = "ingest"
harness = false
